--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Xiaoshan Yu"
-description              : "A Ph.D. candidate in Computer Science at Anhui University, specializing in Evolutionary Computation, Intelligent Education, and Recommender System."
+description              : "A Ph.D. candidate in Computer Science at Anhui University, specializing in Evolutionary Computation, Intelligent Education, and Recommender Systems."
 repository               : "LabyrinthineLeo/LabyrinthineLeo.github.io"
 google_scholar_stats_use_cdn : true
 
