--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ author:
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : # e.g., "linkedin username"
-  dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
+  dblp             : "https://dblp.org/pid/129/4851-2.html"
   orcid            : "https://orcid.org/0000-0003-3728-6914"
   pinterest        :
   soundcloud       :
